<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/home_nav"
            android:title="@string/home_nav"
            android:icon="@drawable/ic_home"/>
    </group>
    <item android:title="Setting">
        <menu>
            <item android:id="@+id/l1_nav"
                android:title="@string/l1_nav"
                android:icon="@drawable/ic_setting"/>
            <item android:id="@+id/l2_nav"
                android:title="@string/l2_nav"
                android:icon="@drawable/ic_setting"/>
            <item android:id="@+id/l3_nav"
                android:title="@string/l3_nav"
                android:icon="@drawable/ic_setting"/>
            <item android:id="@+id/camera_nav"
                android:title="@string/camera_nav"
                android:icon="@drawable/ic_camera"/>
        </menu>

    </item>
</menu>